# python-workshop

./: .env.example  .gitignore  INSTRUCTIONS.md  PROGRESS.md  PYTHON.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
data/: startups.csv  startups.json
solutions/: main.py
solutions/pyforge/: __init__.py  analysis.py  cli.py  config.py  decorators.py  models.py  pipeline.py  repository.py  schemas.py
solutions/pyforge/io/: readers.py  writers.py
solutions/tests/: conftest.py  test_analysis.py  test_models.py  test_pipeline.py  test_repository.py  test_schemas.py
