[project]
name = "python-workshop"
version = "0.1.0"
description = "PyForge — Startup Data Analyzer CLI (AI-First Workshop)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pyforge = "pyforge.cli:app"

[tool.setuptools.packages.find]
include = ["pyforge*"]
exclude = ["solutions*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
